# HyDE

./: .all-contributorsrc  .gitignore  .markdownlint-strict.yaml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  CREDITS.md  Hyprdots-to-HyDE.md  README.md  RELEASE_POLICY.md  flake.nix
Configs/: .hyde.zshrc  .user.zsh  (+1 more)
Configs/.local/lib/hyde/: .editorconfig  amdgpu.py  animations.sh  app2unit.sh  battery.sh  batterynotify.sh  bookmarks.py  brightnesscontrol.sh  calculator.sh  cava.py  cliphist.image.py  cliphist.sh  color.set.sh  color.shuffle.py  configuration.py  cpuinfo.sh  dconf.set.sh  dontkillsteam.sh  emoji-picker.sh  fastfetch.sh  font.sh  fzf_preview.sh  fzf_wrapper.py  gamelauncher.sh  gamemode.sh  globalcontrol.sh  glyph-picker.sh  gpuinfo.sh  grimblast  hyde-config  hyde-launch.sh  hypr.altab.lua  hypr.altab.py  hypr.unbind.sh  hyprlock.sh  hyprsunset.sh  hyq  idle-inhibitor.py  keybinds_hint.sh  keyboardswitch.sh  (+58 more)
Configs/.local/lib/hyde/color/: dconf.sh  hypr.sh
Configs/.local/lib/hyde/gamelauncher/: catalog.py  lutris.py  steam.py
Configs/.local/lib/hyde/keybinds/: hint-hyprland.py
Configs/.local/lib/hyde/luautils/: require.lua
Configs/.local/lib/hyde/pm/: apt.py  dnf.py  flatpak.py  pacman.py  paru.py  yay.py  zypper.py
Configs/.local/lib/hyde/pygui/: color.shuffle.py
Configs/.local/lib/hyde/pyutils/: compositor.py  configuration.py  hyde_pyenv.py  logger.py  lua_env.json  lua_env.py  pip_env.py  python_env.py  requirements.txt  xdg_base_dirs.py
Configs/.local/lib/hyde/screenshot/: grimblast
(+177 files in other folders)
