[project]
name = "hyde-pyutils"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.3",
    "pulsectl==24.12.0",
    "requests==2.33.0",
    "inotify_simple",
    "pywayland",
    "PyGObject",
    "PyQt6",
    "pyprland==2.4.7",
]

[project.optional-dependencies]
amd = ["pyamdgpuinfo"]

[tool.ruff]
line-length = 100
indent-width = 4
